--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -2,16 +2,18 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    
+    android:layout_height="wrap_content"
+    >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:background="@color/MyGrey">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,6 +109,13 @@
             android:scaleType="centerCrop"/>
 
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/MyGrey"></LinearLayout>
+
     </LinearLayout>
+
 
 </RelativeLayout>
