--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="MyRed">#761e1e</color>
     <color name="MyGrey">#8fdfdddd</color>
     <color name="MyWhite">#e3dfdddd</color>
+    <color name="colorProfile">#3b4041</color>
 </resources>
