--- a/app/src/main/res/drawable/inputs.xml
+++ b/app/src/main/res/drawable/inputs.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <solid android:color="@color/colorAccent"></solid>
+    <solid android:color="@color/old"></solid>
     <corners android:radius="30dp"></corners>
+
 </shape>
