--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,43 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login"
+    android:background="@drawable/a333"
     tools:context=".LoginActivity"
     tools:layout_editor_absoluteY="25dp">
 
-
-    <ImageView
-        android:id="@+id/login_icon"
-        android:layout_width="120dp"
-        android:layout_height="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/login_email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
 
     <EditText
         android:id="@+id/login_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_icon"
+
         android:layout_alignParentStart="true"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="17dp"
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/email"
         android:ems="10"
+        android:fontFamily="serif-monospace"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
-        android:padding="10dp"
+        android:padding="5dp"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/login_password"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_icon" />
+        app:layout_constraintTop_toBottomOf="@+id/txtlogo2" />
 
     <EditText
         android:id="@+id/login_password"
@@ -48,14 +38,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="31dp"
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/password"
         android:ems="10"
+        android:fontFamily="serif-monospace"
         android:hint="Password"
         android:inputType="textPassword"
-        android:padding="10dp"
+        android:padding="5dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:typeface="monospace"
         app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,20 +57,19 @@
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="105dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/login_icon"
+
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/button"
-        android:fontFamily="sans-serif"
+        android:fontFamily="serif-monospace"
         android:padding="10dp"
         android:text="Login"
         android:textAllCaps="false"
         android:textColor="@color/colorAccent"
+
         android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,63 +77,103 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="372dp"
-        android:layout_height="31dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginBottom="17dp"
+        android:fontFamily="serif-monospace"
         android:text="Don't Have An Account?"
         android:textAlignment="center"
-        android:textColor="@color/MyRed"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/forget_pasword_link"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="13dp"
-        android:text="Or Login with:"
+        android:layout_marginBottom="27dp"
+        android:fontFamily="serif-monospace"
+        android:text="Forget password?"
         android:textAlignment="center"
-        android:textColor="@color/MyRed"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="205dp"
-        android:layout_height="0dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
+        android:textColor="@color/colorAccent"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="158dp"
+        android:layout_height="52dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="13dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/forget_pasword_link"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <ImageView
             android:id="@+id/facebook_signin_button"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="75dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
             android:src="@drawable/facebook" />
 
         <ImageView
             android:id="@+id/google_signin_button"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="75dp"
+            android:layout_height="match_parent"
 
+            android:layout_marginLeft="5dp"
             android:src="@drawable/google" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/txtlogo1"
+        android:layout_width="141dp"
+        android:layout_height="132dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginBottom="50dp"
+        android:fontFamily="casual"
+        android:text="Wot's  Hapinn"
+        android:textColor="@color/old"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/login_email"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/txtlogo2"
+        android:layout_width="161dp"
+        android:layout_height="177dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="33dp"
+        android:fontFamily="casual"
+        android:text="W"
+        android:textColor="@color/old"
+        android:textSize="120sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/login_email"
+        app:layout_constraintEnd_toEndOf="@+id/login_email"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/login_button"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
