--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawable_layout"
     android:layout_width="match_parent"
-    android:background="@color/mainBackground"
+    android:background="@color/colorPrimaryDark2"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -34,19 +34,6 @@
                 android:layout_height="match_parent" />
         </FrameLayout>
 
-        <ImageButton
-            android:id="@+id/add_new_post_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/add_post_high"
-            android:scaleType="centerCrop"
-            android:layout_marginBottom="4dp"
-            android:layout_marginRight="12dp"
-            android:background="@color/colorPrimaryDark"
-            android:baselineAlignBottom="false"
-            android:focusableInTouchMode="false"
-            />
     </RelativeLayout>
 
 
