--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -78,7 +78,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="54dp"
-        android:background="@drawable/button"
+        android:background="@drawable/buton_like_and_comment_background"
         android:fontFamily="serif-monospace"
         android:padding="15dp"
         android:text="Create Account"
