--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -84,7 +84,7 @@
         android:layout_width="114dp"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/button"
+        android:background="@drawable/buton_like_and_comment_background"
         android:fontFamily="serif-monospace"
         android:padding="14dp"
         android:text="Save"
