--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="210dp"
-    android:background="@drawable/header">
+    android:background="@color/colorPrimaryDark">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
